Custom--app/main/default/objects/New_User_Training_Tab__c/New_User_Training_Tab__c.object-meta.xml
<CustomObject>
    <description>This is a temporary tab that is going to be used to train new users on  basic salesforce.com navigation training.</description>
    <label>User Training Record</label>
    <nameField>
        <displayFormat>Training-{0000}</displayFormat>
        <label>Training Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Training Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>