Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Bookmark_a_Post__c.field-meta.xml
<CustomField>
    <fullName>Bookmark_a_Post__c</fullName>
    <defaultValue>"Click the bookmark next to any post to quickly retrieve later. (You can see all your bookmarked post from your main Chatter tab.)"</defaultValue>
    <label>Bookmark a Post</label>
    <type>TextArea</type>
</CustomField>