Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Chatter_Email_Settings__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Email_Settings__c</fullName>
    <defaultValue>"From any Chatter Group page, click on the 'Email Daily Digest' link to select how you would like to be notified about new posts."</defaultValue>
    <label>Chatter Email Settings</label>
    <type>TextArea</type>
</CustomField>