Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Chatter_Exercises_Completed__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Exercises_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Exercises Completed</label>
    <type>Checkbox</type>
</CustomField>