Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Chatter_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Mobile__c</fullName>
    <defaultValue>"For team members who spend time out of the office, download the Chatter Mobile: https://www.chatter.com/mobile/"</defaultValue>
    <label>Chatter Mobile</label>
    <type>TextArea</type>
</CustomField>