Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post__c</fullName>
    <defaultValue>"Add a Chatter post to this record.  Send an @ message to another user by typing the @ sign and the first few letters of their name and then select the user from the dropdown. Use hashtag (pound sign) to tag the topic training as follows.  #training."</defaultValue>
    <label>Chatter Post</label>
    <type>TextArea</type>
</CustomField>