Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Chatter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Profile__c</fullName>
    <defaultValue>"Update your Chatter profile by uploading a picture and adding your contact information."</defaultValue>
    <label>Chatter Profile</label>
    <type>TextArea</type>
</CustomField>