Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Create_New_View__c.field-meta.xml
<CustomField>
    <fullName>Create_New_View__c</fullName>
    <defaultValue>"From the New User Training tab, click'Create New View' and add a filter where Date Equals TODAY. (You type in the specific date or you can use terms like TODAY, THIS MONTH, LAST 30 days for a dynamic view.)"</defaultValue>
    <label>Create New View</label>
    <type>TextArea</type>
</CustomField>