Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Edit_Mode__c.field-meta.xml
<CustomField>
    <fullName>Edit_Mode__c</fullName>
    <defaultValue>"Edit a record by clicking on the Edit button. Be sure to save your changes. (Note: formula fields will not be visible until you save the records.)"</defaultValue>
    <label>The "Edit" Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>