Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Help_Exercises_Completed__c.field-meta.xml
<CustomField>
    <fullName>Help_Exercises_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Help Exercises Completed</label>
    <type>Checkbox</type>
</CustomField>