Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Hide_Display_a_Section__c.field-meta.xml
<CustomField>
    <fullName>Hide_Display_a_Section__c</fullName>
    <defaultValue>"Use the arrow next to any section to hide/display the fields in that section.  (Salesforce will remember your preference the next time you look at the same type of record."</defaultValue>
    <label>Hide/Display a Section</label>
    <type>TextArea</type>
</CustomField>