Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Homework_Status__c.field-meta.xml
<CustomField>
    <fullName>Homework_Status__c</fullName>
    <label>Homework Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>