Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Join_Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>Join_Chatter_Group__c</fullName>
    <defaultValue>"From the Chatter tab, click on Groups and find the 'Salesforce.com New Users' group and add yourself as a member."</defaultValue>
    <label>Join Chatter Group</label>
    <type>TextArea</type>
</CustomField>