Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Log_a_Support_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Support_Change_Request__c</fullName>
    <defaultValue>"Log a support/change request directly from the record by clicking the 'New SF Support/Change Request record' on the related list below.  Select the record type 'Support Request' and then the type 'Training Exercise'."</defaultValue>
    <label>Log a Support/Change Request</label>
    <type>TextArea</type>
</CustomField>