Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>User Training Records (Market)</relationshipLabel>
    <relationshipName>User_Training_Records</relationshipName>
    <type>Lookup</type>
</CustomField>