Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Navigation_Exercises_Completed__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Exercises_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Navigation Exercises Completed</label>
    <type>Checkbox</type>
</CustomField>