Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Printable_View__c.field-meta.xml
<CustomField>
    <fullName>Printable_View__c</fullName>
    <defaultValue>"Click the Printable View link in the right hand corner of this Training Record to see how you can print the page."</defaultValue>
    <label>Printable View</label>
    <type>TextArea</type>
</CustomField>