Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market2</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>New_User_Training_Record</relationshipName>
    <type>Lookup</type>
</CustomField>