Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Sort_a_View__c.field-meta.xml
<CustomField>
    <fullName>Sort_a_View__c</fullName>
    <defaultValue>"From the New User Training tab, select the All Training Records view from the dropdown. Click on Date on the heading bar to sort all records by date. Click again to sort in reverse order."</defaultValue>
    <label>Sort a "View"</label>
    <type>TextArea</type>
</CustomField>