Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Use_Help_Hovers__c.field-meta.xml
<CustomField>
    <fullName>Use_Help_Hovers__c</fullName>
    <defaultValue>"Remember the phrase 'hover to discover.'  Use the hovers next to the field names to get additional information or instructions."</defaultValue>
    <inlineHelpText>Help icons can display additional information or instructions.</inlineHelpText>
    <label>Use Help Hovers</label>
    <type>TextArea</type>
</CustomField>