Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Using_the_FAQs__c.field-meta.xml
<CustomField>
    <fullName>Using_the_FAQs__c</fullName>
    <defaultValue>"Click on the FAQ tab and select the Chatter view from the dropdown. Browse through the questions to see if you have any questions that have already been addressed.  If you have a new question, feel free to log it by clicking the Create New button."</defaultValue>
    <label>Using the FAQs</label>
    <type>TextArea</type>
</CustomField>