Custom--app/main/default/objects/New_User_Training_Tab__c/fields/Views_Exercises_Completed__c.field-meta.xml
<CustomField>
    <fullName>Views_Exercises_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>"Views" Exercises Completed</label>
    <type>Checkbox</type>
</CustomField>