Custom--app/main/default/objects/New_User_Training_Tab__c/listViews/All_Training_Records.listView-meta.xml
<ListView>
    <fullName>All_Training_Records</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Date__c</columns>
    <columns>Homework_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Training Records</label>
</ListView>